syntax = "proto3";

package congestion;

service CongestionReportService {
  rpc SendTrafficData(stream TrafficDataRequest) returns (TrafficDataResponse) {}
}

message TrafficDataRequest {
  int32 vehicleCount = 1;
  string segment = 2;
}

message TrafficDataResponse {
  string congestionLevel = 1;
  string congestionWarning = 2;
}
